tests/machine/x/fs/left_join.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/left_join.fs(26,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(26,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,11): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,11): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,21): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,21): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (25:28). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/left_join.fs(26,55): error FS0001: Type mismatch. Expecting a
    Anon2 list    
but given a
    Anon1 list    
The type 'Anon2' does not match the type 'Anon1'

/workspace/mochi/tests/machine/x/fs/left_join.fs(27,38): error FS0001: This expression was expected to have type
    Anon1    
but here has type
    Anon2 option    
